--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "devDependencies": {
     "bcrypt": "^0.8.0",
     "body-parser": "^1.6.5",
+    "cookie-parser": "^1.3.3",
     "express": "^4.8.5",
     "express-jwt": "^0.3.1",
+    "express-session": "^1.8.2",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.8.0",
